2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: All recommendations from RFC 3986
	and RFC 3987 are listed (not all testable items are checked yet).

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: New module.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Now most attributes are implemented
	or associated to some placeholder.
	($ElementDefault): Warn unknown attributes
	for unknown elements as "attribute not supported".
	($HTMLLanguageTagAttrChecker, $HTMLMQAttrChecker): New placeholders.
	($HTMLUsemapAttrChecker, $HTMLTargetAttrChecker): New checkers.
	(|a| attribute checker): Reimplemented.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLEventHandlerAttrChecker): New placeholder.
	($HTMLAttrChecker): Event handler content attributes
	are added.
	(link, embed): Required attribute is now checked.
	(embed): Unknown local attributes are no longer warned.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLSpaceURIsAttrChecker): New placeholder.
	($HTMLIMTAttrChecker): New checker.
	(link@rel, link@href, link@type, style@type, 
	a@href, a@ping, a@ping, a@type, embed@src, embed@type,
	object@data, object@type, source@src, source@type, area@alt,
	area@shape, area@coords, area@href,
	area@ping, area@rel, area@type, script@src,
	script@defer, script@async, script@type): Checkers added.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Descendant checking was incorrect.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support |xml:*| and |xmlns:*|
	attributes.  Report an error if |Element.prefix|
	is |xmlns|.

	* NanoDOM.pm (prefix): New attribute.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: In |main| phase, |in body| insertion
	mode, action for |<iframe>| was missing.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for many of HTML5 elements.
	($GetHTMLNonNegativeIntegerAttrChecker): New.
