@@ -1,7 +1,7 @@
 1..780
 # Running under perl version 5.008007 for linux
-# Current time local: Sun May 20 19:55:10 2007
-# Current time GMT:   Sun May 20 10:55:10 2007
+# Current time local: Fri May 25 23:44:06 2007
+# Current time GMT:   Fri May 25 14:44:06 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
