@@ -2,6 +2,8 @@
 
 	* URIChecker.t: New test entries.
 
+	* content-model-2.dat: New test entries for URI attributes.
+
 2007-05-25  Wakaba  <wakaba@suika.fam.cx>
 
 	* URIChecker.t: New test.
