@@ -1,5 +1,9 @@
 2007-05-25  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm ($HTMLURIAttrChecker): Implemented.
+
+2007-05-25  Wakaba  <wakaba@suika.fam.cx>
+
 	* URIChecker.pm: All recommendations from RFC 3986
 	and RFC 3987 are listed (not all testable items are checked yet).
 
